fix: overflow in nft-hexagon on scroll (#155)

--- a/styles/components/tiles.scss
+++ b/styles/components/tiles.scss
@@ -56,6 +56,8 @@
           -ms-transform: skewY(-30deg) rotate3d(0,0,1,60deg);
           transform: skewY(-30deg) rotate3d(0,0,1,60deg);
           background-color: var(--background-input-readonly);
+          -webkit-clip-path: polygon(50% 0%, 100% 25%, 100% 75%, 50% 100%, 0% 75%, 0% 25%);
+          clip-path: polygon(50% 0%, 100% 25%, 100% 75%, 50% 100%, 0% 75%, 0% 25%);
           .img-status {
             top: 40%;
             color: black;
